--- a/src/styles.css
+++ b/src/styles.css
@@ -15,5 +15,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 body {
-  overflow: hidden;
+  /* overflow: hidden; */
+  /* position: relative; */
 }
